they told me to push so I am

--- a/sprint3.html
+++ b/sprint3.html
@@ -10,22 +10,25 @@
 </head>
 
 <div id="sprint1-box" class="ai2html" style="width:100%">
-	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5827px" data-aspect-ratio="0.24" data-min-width="0">
+	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5227px" data-aspect-ratio="0.24" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 5567px 0;"></div>
+		<div style="padding: 0 0 4967px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
 		    <img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
     </a>
 
-		<div class="circle400 blue2" style="right:3%;top:3.85%"></div>
-    <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
-    <div class="circle150 blue1" style="left:44.8%;top:9.3%"></div>
-    <div class="frame" style="height:350px; width:530px; right:6%;top:4.8%"></div>
+		<div class="circle400 blue2" style="right:3%;top:4.85%"></div>
+    <div class="circle300 blue3" style="right:3%;top:7.8%"></div>
+    <div class="circle150 blue1" style="left:50.8%;top:10.3%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; right:6%;top:5.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2working.jpg"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:13.2%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:23.9%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -33,12 +36,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="right:45%;top:18.8%"></div>
-		<div class="circle400 blue2" style="left:3%;top:15.3%"></div>
-		<div class="circle150 blue1" style="right:46%;top:15.3%"></div>
-		<div class="frame" style="height:350px; width:530px; right:52%;top:16.3%"></div>
+		<div class="circle300 blue3" style="right:25%;top:30.3%"></div>
+		<div class="circle400 blue2" style="left:23%;top:26.8%"></div>
+		<div class="circle150 blue1" style="right:26%;top:26.8%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; right:32%;top:27.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2PCB.png"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:33.5%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:44.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -46,12 +52,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle400 blue2" style="right:3%;top:38.3%"></div>
-    <div class="circle300 blue3" style="right:3%;top:36%"></div>
-    <div class="circle150 blue1" style="left:49%;top:42%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:37.3%"></div>
+		<div class="circle400 blue2" style="right:23%;top:49.3%"></div>
+    <div class="circle300 blue3" style="right:23%;top:47%"></div>
+    <div class="circle150 blue1" style="left:29%;top:53%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; left:32%;top:47.3%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Mechanical assembly as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2mechanical.jpg"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:55.1%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:65.3%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -59,25 +68,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:3%;top:61.4%"></div>
-    <div class="circle400 blue2" style="right:45%;top:57.4%"></div>
-    <div class="circle150 blue1" style="right:45%;top:63.4%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:58.7%"></div>
-
-		<div class="dotdotdot" style="top:75.7%;left:50%;margin-left:-55px">
-      <div class="dot"></div>
-      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
-      <div class="dot"></div>
-      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
-      <div class="dot"></div>
-    </div>
-
-		<div class="circle300 blue3" style="left:45%;top:81.6%"></div>
-		<div class="circle400 blue2" style="right:3%;top:78.1%"></div>
-		<div class="circle150 blue1" style="left:46%;top:78.1%"></div>
-		<div class="frame" style="height:350px; width:530px; right:6%;top:79.1%"></div>
-
-		<div class="dotdotdot" style="top:94%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:83.7%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -118,68 +109,61 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:3.85%;left:5.727%;width:32.7258%;">
+    <div id="ai0-1" class="Layer_1 aiAbs" style="top:7.5188%;right:61.5473%;width:32.7258%;">
+			<p class="pstyle0">During Sprint 3, our goal was to print a full page of braille.</p>
+		</div>
+		<div id="ai0-2" class="Layer_1 aiAbs" style="top:14.2915%;left:9.1068%;width:81.773%;">
+			<p class="pstyle1">In this sprint, we wanted to get every subsystem working completely enough so that we could print a full page. Integration was a key part of this sprint, and this was the first sprint where the software, electrical and mechanical components all came together. We did user testing at the beginning of this sprint and took the things we had learned to inform many of our user-facing decisions toward the end of the sprint, including the inclusion of USB and Wifi Inputs and the final design of our interface. We also created our PCB and full printer (complete with all of our solenoids!) and started on the website design.</p>
+		</div>
+		<div id="ai0-3" class="Layer_1 aiAbs" style="top:36.4078%;left:9.5476%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Electrical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle0">During sprint 3, our goal was to [goals goals goals]</p>
+			<p class="pstyle1">We wired all of the components of the interface on a protoboard this sprint and were able to test that with the respective software. Our PCBs arrived the day before the end of the sprint, so that day was spent populating and testing the board. By the end of the sprint, we were able to power the components of the PortaBraille with the new board.</p>
+		</div>
+		<div id="ai0-4" class="Layer_1 aiAbs" style="top:57.4719%;left:10.3409%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Mechanical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">Brief summary of what we did</p>
+			<p class="pstyle1">In this sprint, we mounted all 14 solenoids onto the gantry and created a paper tray. The solenoids aligned with the punch plate mounted in the paper tray, and the roller mechanism guided paper through the tray successfully. We also mechanically integrated our limit switch and photogate onto the design, compleating a rough, but complete mechanical prototype. </p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:15.2198%;left:57.2451%;width:38.691%;">
-			<p class="pstyle2">Electrical</p>
+		<div id="ai0-5" class="Layer_1 aiAbs" style="top:68.0901%;left:10.1806%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Software</p>
 			<p>&nbsp;</p>
-			<p>*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:24.8188%;left:50.3167%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:35.8752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Mechanical</p>
+			<p class="pstyle1">We did a bunch of software this sprint, some of which specifically incorporated our learnings from the user testing we did. Our users told us that having some sort of USB input would be extremely valuable, so we tackled taking input from a USB this sprint. We also started creating a web interface and how to get both of those incorporated some bash scripting which was a lot of fun! </p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 3 text*</p>
+			<p class="pstyle1">Another thing that was really important this sprint was setting up the Raspberry Pi (RasPi) and connecting it to the Arduino and our full system. We spent a good portion of our time this sprint testing the software on the RasPi to run our printer. In that process, we created another bash script to install all of our dependencies (since we had to reflash our Raspberry Pi so many times) which lead to us starting our GitHub README and cleaning and better documenting our codebase. Toward the very beginning of the sprint, we calculated how much one step of the motor moves in a step (.2 mm!) and included it in the firmware.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:45.4632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:57.5512%;left:57.4736%;width:38.691%;">
-			<p class="pstyle2">Software</p>
+		<div id="ai0-6" class="Layer_1 aiAbs" style="top:86.514%;left:9.0134%;width:81.9387%;">
+			<p class="pstyle2" style="text-align:center">Design</p>
 			<p>&nbsp;</p>
-			<p>*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:66.9287%;left:50.5452%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:78.0752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Design</p>
+			<p class="pstyle1">At the beginning of this sprint, we met with VIBUG and got some really good feedback about our interface and printer inputs! Everyone we talked to seemed to like our interface design, so we&rsquo;re sticking with it. We&rsquo;re also going to add wireless printing as an input for the sake of accessibility. Also, as per what our users said, we&rsquo;re focusing on optimizing speed, weight, portability, and cost. </p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:87.1632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 3 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:95.8973%;left:49.9782%;margin-left:-43%;width:86%;">
-			<p class="pstyle3">Other things if we have things to say (eg: major/minor pivots, lessons learned, fun facts)</p>
+			<p class="pstyle1">Finally, we also got the website design fired up! We&rsquo;re trying to make everything as screenreader-friendly as possible, so we&rsquo;re keeping the site relatively simple.</p>
+			<p class="pstyle1"> </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 		</div>
 
 		<div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5187px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:5187px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5187px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5187px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5187px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5187px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
 	</div>
 </div>
+
 <!-- End ai2html - 2019-12-11 03:10 -->
