--- a/sprint4.html
+++ b/sprint4.html
@@ -10,22 +10,25 @@
 </head>
 
 <div id="sprint1-box" class="ai2html" style="width:100%">
-	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5827px" data-aspect-ratio="0.24" data-min-width="0">
+	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5415px" data-aspect-ratio="0.24" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 5567px 0;"></div>
+		<div style="padding: 0 0 5155px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
 		    <img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
     </a>
 
-		<div class="circle400 blue2" style="right:3%;top:3.85%"></div>
-    <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
-    <div class="circle150 blue1" style="left:44.8%;top:9.3%"></div>
-    <div class="frame" style="height:350px; width:530px; right:6%;top:4.8%"></div>
+		<div class="circle400 blue2" style="right:3%;top:4.85%"></div>
+    <div class="circle300 blue3" style="right:3%;top:7.8%"></div>
+    <div class="circle150 blue1" style="left:50.8%;top:10.3%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; right:6%;top:5.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="The Portabraille Printer" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint4main.jpg"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:13.2%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:21.2%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -33,12 +36,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="right:45%;top:18.8%"></div>
-		<div class="circle400 blue2" style="left:3%;top:15.3%"></div>
-		<div class="circle150 blue1" style="right:46%;top:15.3%"></div>
-		<div class="frame" style="height:350px; width:530px; right:52%;top:16.3%"></div>
+    <div class="circle300 blue3" style="right:25%;top:27.3%"></div>
+		<div class="circle400 blue2" style="left:23%;top:23.8%"></div>
+		<div class="circle150 blue1" style="right:26%;top:23.8%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; right:32%;top:24.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Final PCB!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint4PCB.jpg"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:33.5%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:42%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -46,12 +52,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle400 blue2" style="right:3%;top:38.3%"></div>
-    <div class="circle300 blue3" style="right:3%;top:36%"></div>
-    <div class="circle150 blue1" style="left:49%;top:42%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:37.3%"></div>
+		<div class="circle400 blue2" style="right:23%;top:45.3%"></div>
+    <div class="circle300 blue3" style="right:23%;top:43%"></div>
+    <div class="circle150 blue1" style="left:29%;top:49%"></div>
+    <div class="aiAbs" style="height:350px; width:530px; left:32%;top:45.3%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Computer rendering of the portabraille printer" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalRender.png"/></img>
+    </div>
 
-		<div class="dotdotdot" style="top:55.1%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:65%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -59,12 +68,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:3%;top:61.4%"></div>
-    <div class="circle400 blue2" style="right:45%;top:57.4%"></div>
-    <div class="circle150 blue1" style="right:45%;top:63.4%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:58.7%"></div>
-
-		<div class="dotdotdot" style="top:75.7%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:78.7%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -72,12 +76,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:45%;top:81.6%"></div>
-		<div class="circle400 blue2" style="right:3%;top:78.1%"></div>
-		<div class="circle150 blue1" style="left:46%;top:78.1%"></div>
-		<div class="frame" style="height:350px; width:530px; right:6%;top:79.1%"></div>
-
-		<div class="dotdotdot" style="top:94%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:91.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -118,65 +117,66 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:3.85%;left:5.727%;width:32.7258%;">
+    <div id="ai0-1" class="Layer_1 aiAbs" style="top:7.2578%;right:61.5473%;width:32.7258%;">
+			<p class="pstyle0">During Sprint 4, our goal was to have a product that we were proud of.</p>
+		</div>
+		<div id="ai0-2" class="Layer_1 aiAbs" style="top:13.7953%;left:9.1068%;width:81.773%;">
+			<p class="pstyle1">In this sprint, we wanted to put final (or not so final) touches on the product so that we could walk away from this experience with a project which we were all proud of. That meant things like designing an enclosure, a network landing page, and team shirts so that we could have a cohesive &ldquo;brand&rdquo;. It also meant thinking about how to make everything neat and integrated from a user perspective. Finally, we thought a good amount about how to make this work after we had stopped touching it, so we set up things to run our software headlessly without being wired in. </p>
+		</div>
+		<div id="ai0-3" class="Layer_1 aiAbs" style="top:34.0173%;left:9.5476%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Electrical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle0">During sprint 4, our goal was to [goals goals goals]</p>
+			<p class="pstyle1">We tackled heat management this sprint, adding heat sinks to our stepper drivers and powering a fan to keep the boards and solenoids cool. We also did a whole lot of wire management (read: used a lot of zip-ties) to keep the wires need within the enclosure. The only real edit to circuitry was replacing the yellow LED in the interface with a green LED. Other than that, electrical developments have been wrapped up. </p>
+		</div>
+		<div id="ai0-4" class="Layer_1 aiAbs" style="top:54.4239%;left:10.3409%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Mechanical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">Brief summary of what we did</p>
+			<p class="pstyle1">In the final sprint, we did a ton of work on finalizing and finishing in order to turn the rough prototype into a mechanically beautiful final product. We fixed precision issues by 3d printing plates that remove adjustability and replace it with machine accuracy. Issues with the paper tray were resolved for smoother paper feeding. New side plates were sculpted and 3d printed to mount the motors and belt system. The side plates also decreased mechanical complexity and weight tremendously. They also act as mounts for all the electronics that go into the printer. We designed and manufactured and enclosure that packages the printer, and added a cooling fan for the high power electronics. </p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:15.2198%;left:57.2451%;width:38.691%;">
-			<p class="pstyle2">Electrical</p>
+		<div id="ai0-5" class="Layer_1 aiAbs" style="top:67.6467%;left:10.1806%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Software</p>
 			<p>&nbsp;</p>
-			<p>*sprint 4 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:24.8188%;left:50.3167%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 4 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:35.8752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Mechanical</p>
+			<p class="pstyle1">This sprint, we finished up the integration of all of the user-facing aspects of our project. In this sprint, we tackled putting text to speech throughout our entire user experience. We also wrote all of the code to control our physical user interface as well as integrated both our USB and Wi-Fi inputs into our existing printer. </p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 4 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:45.4632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 4 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:57.5512%;left:57.4736%;width:38.691%;">
-			<p class="pstyle2">Software</p>
+			<p class="pstyle1">Other than that, we set up an SSH protocol on the Raspberry Pi so that we could control it wirelessly from our laptops and wrote a script so that the Portabraille software would continue to run whenever it was plugged in. We also finished off the GitHub README and all of the software website content.</p>
 			<p>&nbsp;</p>
-			<p>*sprint 4 text*</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:66.9287%;left:50.5452%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 4 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:78.0752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Design</p>
+		<div id="ai0-6" class="Layer_1 aiAbs" style="top:81.3866%;left:9.0315%;width:81.9387%;">
+			<p class="pstyle2" style="text-align:center">Design</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 4 text*</p>
+			<p class="pstyle1">In this sprint, we completed the design for the flask portal and the website. We also implemented the website in html and css. In addition to the creation of this very site, we also added the content about design to it. We did an extensive photoshoot of our team and finished product, and incorporated these into our site as well.</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">The other large design task we completed was the creation of team shirts for demo day. These used our color scheme, creating a consistent look across all parts of our project.</p>
+			<p class="pstyle1"> </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:87.1632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 4 text*</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:95.8973%;left:49.9782%;margin-left:-43%;width:86%;">
-			<p class="pstyle3">Other things if we have things to say (eg: major/minor pivots, lessons learned, fun facts)</p>
+		<div id="ai0-7" class="Layer_1 aiAbs" style="top:94.4801%;left:9.9875%;width:81.773%;">
+			<p class="pstyle1"><span class="cstyle0">Sprint 3 Fun Fact:</span> The night before our in-class demo, our team agreed that we would all go to bed by 1 AM. Not only did that not happen, but we also all saw a SODIUM show together that night. </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1"> </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
 		</div>
 
 		<div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5375px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:5375px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5375px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5375px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5375px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5375px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
