made borders scale!

--- a/mechanical.html
+++ b/mechanical.html
@@ -31,25 +31,25 @@
     <div class="circle450 blue3" style="left:55%;top:32%"></div>
     <div class="circle250 blue1" style="left:72%;top:25%"></div>
     <div class="circle675 blue2" style="left:10%;top:24%"></div>
-    <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:26%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Bank of mounted solenoids" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalSolenoids.jpg"/></img>
+    <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:25%">
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Bank of mounted solenoids" style="width:94%;height:auto;top:30px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\mechanicalSolenoids.jpg"/></img>
     </div>
 
     <div class="circle450 blue3" style="right:55%;top:57.7%"></div>
     <div class="circle250 blue1" style="right:72%;top:68.7%"></div>
     <div class="circle675 blue2" style="right:10%;top:57.7%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:59.7%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Computer rendering of the Portabraille Printer" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalRender.png"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Computer rendering of the Portabraille Printer" style="width:94%;height:auto;top:30px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\mechanicalRender.png"/></img>
     </div>
 
     <div class="circle450 blue3" style="left:55%;top:87%"></div>
     <div class="circle250 blue1" style="left:72%;top:81%"></div>
     <div class="circle675 blue2" style="left:10%;top:81%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:82%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Final assembly of the Portabraille Printer" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalenclosure.jpg"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Final assembly of the Portabraille Printer" style="width:94%;height:auto;top:30px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\mechanicalenclosure.jpg"/></img>
     </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
