made borders scale!

--- a/electrical.html
+++ b/electrical.html
@@ -10,7 +10,7 @@
 </head>
 
 <div id="resources-box" class="ai2html" style="width:100%">
-	<div id="resources" class="artboard" style="max-width:100%;max-height:3327px" data-aspect-ratio="0.598" data-min-width="0">
+	<div id="resources" class="artboard" style="max-width:100%;max-height:3927px" data-aspect-ratio="0.598" data-min-width="0">
 
 		<div class="header blue1"></div>
 		<div style="padding: 0 0 3067px 0;"></div>
@@ -32,24 +32,24 @@
     <div class="circle250 blue1" style="left:72%;top:22%"></div>
     <div class="circle675 blue2" style="left:10%;top:21%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:23%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Portabraille Interface" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\electricalfinaldiagram.png"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Portabraille Interface" style="width:90%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaldiagram.png"/></img>
     </div>
 
     <div class="circle450 blue3" style="right:55%;top:51%"></div>
     <div class="circle250 blue1" style="right:72%;top:44%"></div>
     <div class="circle675 blue2" style="right:10%;top:43%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:45%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Portabraille printing" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\electricalfinaltrace.png"/></img>
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Portabraille printing" style="width:90%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaltrace.png"/></img>
     </div>
 
     <div class="circle450 blue3" style="left:55%;top:80%"></div>
     <div class="circle250 blue1" style="left:72%;top:73%"></div>
     <div class="circle675 blue2" style="left:10%;top:73%"></div>
-    <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:74%">
-      <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Interface circuit diagram" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\electricalinterfacediagram.png"/></img>
+    <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-300px;top:78%">
+      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+      <img class="portrait" alt="Interface circuit diagram" style="width:60%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalinterfacediagram.png"/></img>
     </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
@@ -97,13 +97,13 @@
 			<p class="pstyle1">Pictured above is the final circuit diagram for the PCB.</p>
 			<p>&nbsp;</p>
 		</div>
-		<div id="ai0-4" class="Layer_1 aiAbs" style="top:63.2019%;left:13.793%;width:72.4109%;">
+		<div id="ai0-4" class="Layer_1 aiAbs" style="top:68.2019%;left:13.793%;width:72.4109%;">
 			<p class="pstyle1">Pictured above is the final layout of the PCB.  We adjusted trace widths to support the high current draw from the power supply.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle1">The circuitry for the interface was housed on a protoboard, allowing us to easily adjust our design to the physical shape of the interface quite easily. The Raspberry Pi collected data on the states of the buttons and sound switch and turned on and off the LEDs.</p>
 			<p>&nbsp;</p>
 		</div>
-		<div id="ai0-5" class="Layer_1 aiAbs" style="top:92.7141%;left:13.793%;width:72.4109%;">
+		<div id="ai0-5" class="Layer_1 aiAbs" style="top:94.7141%;left:13.793%;width:72.4109%;">
 			<p class="pstyle1">This is the circuit diagram for the interface.</p>
 			<p>&nbsp;</p>
 		</div>
