--- a/sprint2.html
+++ b/sprint2.html
@@ -41,7 +41,9 @@
 		<div class="circle150 blue1" style="right:26%;top:20.8%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:32%;top:21.8%">
       <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2PCB.png"/></img>
+	  <!-- <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2PCB.png"/></img> -->
+	  <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2working.jpg"/></img>
+
     </div>
 
 		<div class="dotdotdot" style="top:39.5%;left:50%;margin-left:-55px">
