a new commit message

--- a/sprint1.html
+++ b/sprint1.html
@@ -81,7 +81,7 @@
 		<div class="circle150 blue1" style="left:46%;top:67.1%"></div>
 		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:67.1%">
 			<!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-			<img class="portrait" alt="Whiteboard with initial brainstorm" style="width:80%;height:auto;top:25px;right:50%;margin-right:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Brainstorm.jpg"/></img>
+			<img class="portrait" alt="Whiteboard with initial brainstorm" style="width:80%;height:auto;top:25px;right:50%;margin-right:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Brainstorm.JPG"/></img>
 		</div>
 
 		<div class="dotdotdot" style="top:87.5%;left:50%;margin-left:-55px">
