--- a/system.html
+++ b/system.html
@@ -32,6 +32,7 @@
     <div class="circle250 blue1" style="left:72%;top:26.5%"></div>
     <div class="circle675 blue2" style="left:10%;top:26.5%"></div>
     <div class="frame" style="height:800px; width:880px; left:50%;margin-left:-440px;top:28.5%"></div>
+    <img class="portrait" alt="System Image" style="width:90%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\systemOverview.jpg"/></img>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
