a new commit message

--- a/software.html
+++ b/software.html
@@ -79,7 +79,7 @@
 			<p class="pstyle0">Software</p>
 		</div>
 		<div id="ai0-2" class="Layer_1 aiAbs" style="top:9.5982%;left:13.7989%;width:72.4109%;">
-			<p class="pstyle1">The Portabraille has a few main software components: a portion that processes and writes text, a portion that recognizes usb and wifi input, a portion that hosts and handles our Wi-Fi network and a portion that handles the physical input from the user interface. There are also various scripts which allow users to easily set up new drives with the right dependencies and a script which allows the printer to run continuously once it is switched on. To run all of this software, we chose to use a Raspberry Pi 3B+. </p>
+			<p class="pstyle1">The Portabraille has a few main software components: a portion that processes and writes text, a portion that recognizes USB and Wi-Fi input, a portion that hosts and handles our Wi-Fi network and a portion that handles the physical input from the user interface. There are also various scripts which allow users to easily set up new drives with the right dependencies and a script which allows the printer to run continuously once it is switched on. To run all of this software, we chose to use a Raspberry Pi 3B+. </p>
 			<p>&nbsp;</p>
 			<p class="pstyle1">All of this code allows for an accessible user-friendly experience. Essentially, a user plugs in a USB or submits a file from our local Portabraille network, and uses the physical interface to navigate through their printing journey, with the option to include spoken instructions and notifications throughout the process. </p>
 		</div>
